<resources>
    <string name="app_name">Mithra</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="userid" translatable="false">UserId</string>
    <string name="welcome" translatable="false">Welcome to Mithra App</string>
    <string name="let_s_get_started" translatable="false">Let\'s Get Started</string>
    <string name="name_small_case">Name</string>
    <string name="age">Age</string>
    <string name="dashboard">Dashboard</string>
    <string name="participants">Participants</string>
    <string name="participant_status">Participant Status</string>
    <string name="profile">Profile</string>
    <string name="add_new_participant">Add new participant</string>
    <string name="add_new_participant_text">Add New Participant</string>
    <string name="participant_name">Name of the participant</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="next_question">Next</string>
    <string name="disease_profile">Disease Profile</string>
    <string name="thyroid" translatable="false">Thyroid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="diagnosed_thyroid" translatable="false">Have you been diagnosed with Thyroid</string>
    <string name="limit_activities">Does this condition limit your activities?</string>
    <string name="received_treatment">Do you receive\ntreatment for this condition?</string>
    <string name="diagnosed_age">How old were you when this was diagnosed?</string>
    <string name="specify_disease">Specify other disease</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="base_url" translatable="false">43.205.146.90</string>
    <string name="mp_token" translatable="false">token 2559f591d98ea66:9e2cdc0890cc4eb</string>
    <string name="mc_token" translatable="false">token c043b3fae600f17:b7d57f73ccc6f7e</string>
    <string name="participate_name" translatable="false">Participate 1</string>
    <string name="congratulation_text">Thank you for completing this module. We appreciate your time.</string>
    <string name="authorization_tokens" translatable="false">AuthorizationTokens</string>
    <string name="participant" translatable="false">participant</string>
    <string name="coordinator" translatable="false">coordinator</string>
    <string name="researcher" translatable="false">researcher</string>
    <string name="user_role" translatable="false">UserRole</string>
    <string name="user_name_participant" translatable="false">ParticipantUserName</string>
    <string name="user_name_coordinator" translatable="false">CoordinatorUserName</string>
    <string name="user_name_researcher" translatable="false">ResearcherUserName</string>
    <string name="survey_answers" translatable="false">Survey Answers</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="survey">Survey</string>
    <string name="video">Video</string>
    <string name="activity">Activity</string>
    <string name="was_this_video_helpful">Was this video helpful?</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="default_text">This is an introductory video.</string>
    <string name="opinion_toast">Thank you for your opinion.</string>
    <string name="village">Village</string>
    <string name="all_list">All List</string>
    <string name="new_tab">New</string>
    <string name="green_tab">Green</string>
    <string name="yellow_tab">Yellow</string>
    <string name="red_tab">Red</string>
    <string name="next">Next</string>
    <string name="screening">Screening</string>
    <string name="inclusion">Inclusion</string>
    <string name="age_above_18_years">Age above 18 years</string>
    <string name="resident">Resident of the study \nvillage</string>
    <string name="CBOMeetingMonths">Willing to attend the CBO \nmeeting regularly in the \nupcoming months</string>
    <string name="exclusion">Exclusion</string>
    <string name="diagnosed_with_mental_illness">Previously diagnosed with any \nsevere mental illness such as \nbipolar disorder or schizophrenia</string>
    <string name="substance_abuse">Involved in substance use \nor severe alcohol use in \nlast 6 months</string>
    <string name="user_consent">Unable to participate in \ninformed consent \ndiscussion</string>
    <string name="attempted_suicide">Attempted suicide in last 6 \nmonths</string>
    <string name="registration">Registration</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="english" translatable="false">English</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="userName" translatable="false">User Name</string>
    <string name="primaryID" translatable="false">PrimaryID</string>
    <string name="tracking" translatable="false">Tracking</string>
    <string name="userScreeningName" translatable="false">ScreeningName</string>
    <string name="userScreeningID" translatable="false">ScreeningID</string>
    <string name="trackingName" translatable="false">TrackingName</string>
    <string name="trackingRegistrationName" translatable="false">RegistrationName</string>
    <string name="trackingSocioDemography" translatable="false">SocioDemographyName</string>
    <string name="trackingDiseaseProfile" translatable="false">DiseaseProfileName</string>
    <string name="participantPrimaryID" translatable="false">ParticipantPrimaryID</string>
    <string name="coordinatorPrimaryID" translatable="false">CoordinatorPrimaryID</string>
    <string name="researcherPrimaryID" translatable="false">CoordinatorPrimaryID</string>
    <string name="userPassword" translatable="false">Password</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="village_name">Village Name</string>
    <string name="shg_association">SHG Association</string>
    <string name="panchayat">Panchayat</string>
    <string name="create">Create</string>
    <string name="socio_demography">Socio Demography</string>
    <string name="SHGMeetings6Months">How many SHG \nmeetings attended \nin last 6 Months?</string>
    <string name="no_schooling">No Schooling</string>
    <string name="ten_to_eleven">10 – 11</string>
    <string name="eight_to_nine">8 – 9</string>
    <string name="five_to_seven">5 – 7</string>
    <string name="less_than_five"><![CDATA[< 5]]></string>
    <string name="twelve_or_more">12 or more</string>
    <string name="professional">Professional</string>
    <string name="unskilled_manual">Unskilled Manual</string>
    <string name="skilled_manual">Skilled Manual</string>
    <string name="sales_and_services">Sales and Services</string>
    <string name="agriculture">Agriculture</string>
    <string name="clerical">Clerical</string>
    <string name="hindu">Hindu</string>
    <string name="buddhist_neo_buddhist">Buddhist/Neo buddhist</string>
    <string name="sikh">Sikh</string>
    <string name="christian">Christian</string>
    <string name="jain">Jain</string>
    <string name="other">Other</string>
    <string name="muslim">Muslim</string>
    <string name="preferred_not_to_answer">Preferred Not to Answer</string>
    <string name="scheduled_caste">Scheduled Caste</string>
    <string name="do_not_know">Don\'t Know</string>
    <string name="other_backward_class">Other Backward Class</string>
    <string name="scheduled_tribe">Scheduled Tribe</string>
    <string name="never_married">Never Married</string>
    <string name="widow">Widow</string>
    <string name="separated">Separated</string>
    <string name="divorced">Divorced</string>
    <string name="nuclear_family">Nuclear Family</string>
    <string name="joint_family">Joint Family</string>
    <string name="number">Number</string>
    <string name="phc">PHC</string>
    <string name="years_of_education">Years Of education</string>
    <string name="marital_status">Marital Status</string>
    <string name="occupation">Occupation</string>
    <string name="nearest_phc">Nearest PHC</string>
    <string name="religion">Religion</string>
    <string name="total_family_income_per_month">Total family Income \n(per month)</string>
    <string name="married">Married</string>
    <string name="caste">Caste</string>
    <string name="number_of_family_members">Number of Adult \nFamily Members</string>
    <string name="child_members">Number of Child \nFamily Members</string>
    <string name="earning_members">Total earning \nmembers in the \nfamily</string>
    <string name="CBOMeetings">How many CBO\nmeetings attended\nin the last months?</string>
    <string name="type_of_family">Family Type</string>
    <string name="association_duration">Duration(in Years) \nof association with \nCBO/SHG</string>
    <string name="part_id">Part ID</string>
    <string name="details">Details</string>
    <string name="enrollment_status">Enrollment Status</string>
    <string name="survey_status">Survey Status</string>
    <string name="module_status">Module Status</string>
    <string name="referral_status">Referral Status</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="diffPassword">Your new password must be different from\nprevious used passwords.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="eight_characters">Must be at least 4 characters.</string>
    <string name="passwords_match">Both passwords must match.</string>
    <string name="reset_password">Reset Password</string>
    <string name="update">Update</string>
    <string name="not_eligible_text">Regret to say that you are not eligible for the Survey</string>
    <string name="ok">Ok</string>
    <string name="phq_screening">SHG Screening</string>
    <string name="phq_screen">PHQ Screening</string>
    <string name="phq_screening_id">PHQ Screening ID</string>
    <string name="manual_id">Manual ID</string>
    <string name="coordinator_shg">Coordinator SHG</string>
    <string name="researcher_shg">Researcher SHG</string>
    <string name="pre_screening">Pre screening</string>
    <string name="phq9">PHQ9</string>
    <string name="bads">BADS</string>
    <string name="quids_sr">QUIDS SR</string>
    <string name="whodas">WHODAS</string>
    <string name="module_0">Module 0</string>
    <string name="module_1">Module 1</string>
    <string name="module_2">Module 2</string>
    <string name="module_3">Module 3</string>
    <string name="module_4">Module 4</string>
    <string name="module_5">Module 5</string>
    <string name="module_6">Module 6</string>
    <string name="module_7">Module 7</string>
    <string name="eligibility">Eligibility</string>
    <string name="phq_9_score">PHQ-9 Score</string>
    <string name="screening_id">Screening ID</string>
    <string name="phq_id">PHQ ID</string>
    <string name="registration_sp" translatable="false">Registration</string>
    <string name="socio_demography_sp" translatable="false">SocioDemography</string>
    <string name="disease_profile_sp" translatable="false">DiseaseProfile</string>
    <string name="something_wrong">Something went wrong. Please try again later.</string>
    <string name="update_message">Updated Successfully.</string>
    <string name="enter_all_details">Please give all the details.</string>
    <string name="answer_all_questions">Please answer all the questions.</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="reason">Reason</string>
    <string name="current_status">Current Status</string>
</resources>