<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/screen_background"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/closeAlertButtonRegistration"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:src="@drawable/close_alert_icon"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/createNewPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/diffPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:text="@string/diffPassword"
            android:layout_gravity="start"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/passwordTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp" />

        <EditText
            android:id="@+id/passwordETPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs_background_grey"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"
            android:padding="5dp"
            android:maxLength="12"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/eightCharTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_characters"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/confirmPasswordTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/text_color"
            android:layout_gravity="start"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/confirmPasswordETPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs_background_grey"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"
            android:maxLength="12"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/passwordsMatchTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwords_match"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/resetPasswordButtonPopup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:background="@drawable/status_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:padding="5dp"
            android:layout_margin="20dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>