<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/screen_background"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/closeAlertButtonPopup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:src="@drawable/close_alert_icon"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/userNameTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_gravity="start"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/userNameETPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs_background"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/userPhoneNumTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/userPhoneNumETPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs_background"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/userSHGTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shg_association"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/userSHGETPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs_background"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/userCurrentStatusTVPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_status"
            android:textColor="@color/text_color"
            android:layout_gravity="start"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:padding="5dp"/>

        <LinearLayout
            android:id="@+id/currentStatusLL"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activeStatusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/yes_no_button"
                android:elevation="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/active"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/inactiveStatusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/yes_no_button"
                android:elevation="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/inactive"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/statusUpdateReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textColor="@color/text_color"
            android:layout_gravity="start"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/statusUpdateReasonSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dropdown_with_arrow"
            android:textColor="@color/text_color"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:dropDownVerticalOffset="48dp"
            android:popupBackground="@color/white"
            android:layout_margin="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/saveCurrentStatusButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/status_button"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:padding="5dp"
            android:layout_margin="20dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>